--- a/assignment/src/styles.css
+++ b/assignment/src/styles.css
@@ -41,6 +41,7 @@ h1{
      padding: 2px 8px 2px 8px; 
      width: 3rem; 
      background-color:black;
+     animation: b1 1s ease infinite;
     
   }
 
@@ -192,6 +193,17 @@ h1{
   button:hover{
     background-color: brown;
     
+  }
+ @keyframes b1 {
+    0% {
+      transform: scale(1, 1);
+    }
+    50% {
+      transform: scale(1.5, 1.5);
+    }
+    100% {
+      transform: scale(1, 1);
+    }
   }
 
   
